# advent-of-code

./: .gitignore  Makefile  README.md
2019/day-01/: main.cpp
2025/day-01/: main.cpp
2025/day-02/: main.cpp
2025/day-05/: main.cpp
2025/day-06/: main.cpp
2025/day-08/: main.cpp
2025/day-09/: main.cpp
2025/day-10/: .gitignore  CMakeLists.txt  main.cpp
2025/day-11/: main.cpp
2025/day-12/: main.cpp
day-03/: main.cpp
day-04/: main.cpp
day-07/: main.cpp
